# Monitoring_Team7_LF8

./: - Copy.env  README.md  alarm.py  monitoring1.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.github/workflows/: ci.yml  deploy-windows.yml  monitor-cron.yml  selfhosted-smoke.yml
Monitoring_Team7_LF8/tests/: test_alarm_thresholds.py  test_collectors.py
tests/: test_alarm_edges.py  test_alarm_thresholds.py  test_cli_help.py  test_monitoring_errors.py  test_monitoring_flow.py  test_users_logging.py
